plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.0'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.crud'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'mysql:mysql-connector-java'
	annotationProcessor 'org.projectlombok:lombok'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.16.1'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'com.google.code.gson:gson'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.16.1'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	testImplementation group: 'com.h2database', name: 'h2', version: '2.1.214'
}

tasks.named('test') {
	useJUnitPlatform()
}
